--- a/mac/ユーザ辞書.plist
+++ b/mac/ユーザ辞書.plist
@@ -4,11 +4,19 @@
 <array>
 	<dict>
 		<key>phrase</key>
+		<string> (´；ω；｀)ﾌﾞﾜｯ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422324889</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
 		<string> 人ゝω・)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1417965742</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -16,7 +24,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1390383349</integer>
+		<integer>1420592726</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(　 Д )　　ﾟ　　ﾟ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422237762</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -24,7 +40,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -32,7 +48,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -40,7 +56,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -48,7 +64,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418655807</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -56,7 +72,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -64,7 +80,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -72,7 +88,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1390739356</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -80,7 +96,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1397922258</integer>
+		<integer>1420592726</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(;・`д・́)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422356650</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -88,7 +112,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -96,7 +120,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -104,7 +128,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -112,7 +136,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1393986630</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -120,7 +144,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -128,7 +152,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418655787</integer>
+		<integer>1420592726</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(*´ω｀*)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422237817</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -136,7 +168,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1417965711</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -144,7 +176,23 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(/ω・＼)ﾁﾗｯ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422841770</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(`・ω・´)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422358572</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -152,7 +200,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -160,7 +208,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1392128386</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -168,7 +216,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1392128449</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -176,7 +224,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -184,7 +232,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -192,7 +240,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -200,7 +248,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -208,7 +256,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -216,7 +264,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>（＾ω＾）</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422872624</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -224,7 +280,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418655760</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -232,7 +288,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -240,7 +296,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -248,7 +304,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1418655816</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -256,7 +312,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1392128409</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -264,7 +320,23 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>∑(ﾟДﾟ)ｱｯ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422369738</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>+（0ﾟ・∀・） + ﾜｸﾜｸﾃｶﾃｶ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422578765</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -272,7 +344,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1404229056</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -280,7 +352,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1397922240</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -288,7 +360,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1395423089</integer>
+		<integer>1420592726</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>ヽ(・∀・ )ﾉ ｷｬｯ ｷｬｯ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422578783</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -296,7 +376,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>ヾ(*´∀｀*)ﾉｷｬｯｷｬ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1422578750</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -304,7 +392,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -312,7 +400,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -320,7 +408,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1392128398</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -328,7 +416,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -336,7 +424,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -344,7 +432,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -352,7 +440,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -360,7 +448,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -368,7 +456,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403280313</integer>
+		<integer>1420592726</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -376,7 +464,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414431833</integer>
+		<integer>1420592726</integer>
 	</dict>
 </array>
 </plist>
