オフィス引っ越し前の設定保存(・ω・)

--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -32,6 +32,8 @@
 	; cl = clone
 	cl = clean
 	cp = cherry-pick
+	rl = reflog
+	rv = revert
 
 	; http://qiita.com/peccul/items/90dd469e2f72babbc106
 	today = log --oneline --since='12 hour ago'
