--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9393,7 +9393,7 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -9401,9 +9401,15 @@
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
 	<key>NSWindow Frame Preferences</key>
-	<string>857 236 924 485 0 0 1920 1058 </string>
+	<string>16 288 924 485 0 0 1280 777 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>931 621 384 129 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1978 45 1498 824 1920 -120 1920 1178 </string>
+	<string>635 60 625 712 0 0 1280 777 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>79 64 625 714 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>173 64 625 714 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9418,146 +9424,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.10051459074020386</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.10051288455724716</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.10051589459180832</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.1875</real>
+				<real>0.3728577196598053</real>
 				<key>Green Component</key>
-				<real>0.1875</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.95683503150939941</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.4375</real>
+				<real>0.14004382491111755</real>
 				<key>Green Component</key>
-				<real>0.60546875</real>
+				<real>0.87921047210693359</real>
 				<key>Red Component</key>
-				<real>0.33203125</real>
+				<real>0.59473341703414917</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.38154411315917969</real>
 				<key>Green Component</key>
-				<real>0.67578125</real>
+				<real>0.83635991811752319</real>
 				<key>Red Component</key>
-				<real>0.80078125</real>
+				<real>0.87748134136199951</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80078125</real>
+				<real>0.99877572059631348</real>
 				<key>Green Component</key>
-				<real>0.6015625</real>
+				<real>0.39599207043647766</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.61468899250030518</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78515625</real>
+				<real>0.3728577196598053</real>
 				<key>Green Component</key>
-				<real>0.41015625</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.80078125</real>
+				<real>0.95683503150939941</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80078125</real>
+				<real>0.92060363292694092</real>
 				<key>Green Component</key>
-				<real>0.76953125</real>
+				<real>0.81977206468582153</real>
 				<key>Red Component</key>
-				<real>0.4765625</real>
+				<real>0.34416967630386353</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80078125</real>
+				<real>0.9359474778175354</real>
 				<key>Green Component</key>
-				<real>0.80078125</real>
+				<real>0.96549534797668457</real>
 				<key>Red Component</key>
-				<real>0.73828125</real>
+				<real>0.96537256240844727</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.4375</real>
+				<real>0.14004382491111755</real>
 				<key>Green Component</key>
-				<real>0.60546875</real>
+				<real>0.87921047210693359</real>
 				<key>Red Component</key>
-				<real>0.33203125</real>
+				<real>0.59473341703414917</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.099807053804397583</real>
 				<key>Green Component</key>
-				<real>0.67578125</real>
+				<real>0.51805692911148071</real>
 				<key>Red Component</key>
-				<real>0.80078125</real>
+				<real>0.98094809055328369</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80078125</real>
+				<real>0.99877572059631348</real>
 				<key>Green Component</key>
-				<real>0.6015625</real>
+				<real>0.39599207043647766</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.61468899250030518</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78515625</real>
+				<real>0.3728577196598053</real>
 				<key>Green Component</key>
-				<real>0.41015625</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.80078125</real>
+				<real>0.95683503150939941</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80078125</real>
+				<real>0.92060363292694092</real>
 				<key>Green Component</key>
-				<real>0.76953125</real>
+				<real>0.81977206468582153</real>
 				<key>Red Component</key>
-				<real>0.4765625</real>
+				<real>0.34416967630386353</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80078125</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>0.80078125</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>0.73828125</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.29652142524719238</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.36959609389305115</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.3829454779624939</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.1875</real>
+				<real>0.3728577196598053</real>
 				<key>Green Component</key>
-				<real>0.1875</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.95683503150939941</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9566,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.1875</real>
+				<real>0.10051459074020386</real>
 				<key>Green Component</key>
-				<real>0.1875</real>
+				<real>0.10051288455724716</real>
 				<key>Red Component</key>
-				<real>0.1875</real>
+				<real>0.10051589459180832</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9589,11 +9595,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9606,20 +9612,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.92647796869277954</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.96674919128417969</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.96554505825042725</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9640,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.76079577207565308</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>0.7619737982749939</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>0.68694168329238892</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10000,20 +10006,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.20521116256713867</real>
 				<key>Green Component</key>
-				<real>0.74590206146240234</real>
+				<real>0.20520767569541931</real>
 				<key>Red Component</key>
-				<real>0.48940977454185486</real>
+				<real>0.20521381497383118</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10937,7 +10943,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/a13596/Desktop/repository/SettingFiles/mac</string>
+	<string>~/Desktop/repository/SettingFiles/mac/</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10955,7 +10961,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-02-12T00:48:58Z</date>
+	<date>2015-02-16T15:22:01Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
