--- a/.agignore
+++ b/.agignore
@@ -2,6 +2,8 @@
 *.swp
 *.bak
 *.old
+*.tmp
+*.out
 tmp
 old
 .vim/bundle
@@ -9,8 +11,6 @@ old
 .git
 .svn
 zsh-completions
-lib
-libs
 jquery-*.js
 bootstrap*.css
 bootstrap*.js
@@ -21,5 +21,5 @@ node_modules
 *.zip
 *.log
 *.sql
-
 *.tpl.php
+*.*proj
