--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "vimfiles/.vim/bundle/Vundle.vim"]
-	path = vimfiles/.vim/bundle/Vundle.vim
-	url = https://github.com/gmarik/Vundle.vim
 [submodule ".emacs.d/elisp/yasnippet"]
   path = .emacs.d/elisp/yasnippet
   url = https://github.com/capitaomorte/yasnippet
@@ -25,3 +22,6 @@
 [submodule "submodules/zaw"]
 	path = submodules/zaw
 	url = https://github.com/zsh-users/zaw
+[submodule "vimfiles/.vim/bundle/neobundle.vim"]
+	path = vimfiles/.vim/bundle/neobundle.vim
+	url = https://github.com/Shougo/neobundle.vim
