--- a/.agignore
+++ b/.agignore
@@ -1,25 +1,25 @@
-*~
-*.swp
+*.*proj
 *.bak
-*.old
-*.tmp
-*.out
-tmp
-old
-.vim/bundle
-.vim/dict
-.git
-.svn
-zsh-completions
-jquery-*.js
-bootstrap*.css
-bootstrap*.js
-jquery.js
-node_modules
 *.egg
 *.egg-info
-*.zip
 *.log
+*.old
+*.out
 *.sql
-*.tpl.php
-*.*proj
+*.swp
+*.tmp
+*.tpl*.php
+*.zip
+*~
+.git
+.svn
+.vim/bundle
+.vim/dict
+bootstrap*.css
+bootstrap*.js
+jquery-*.js
+jquery.js
+node_modules
+old
+tmp
+zsh-completions
