--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9401,11 +9401,11 @@
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
 	<key>NSWindow Frame Preferences</key>
-	<string>16 288 924 485 0 0 1280 777 </string>
+	<string>60 280 924 485 0 0 1280 777 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>931 621 384 129 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>451 57 625 712 0 0 1280 777 </string>
+	<string>50 65 625 712 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>79 64 625 714 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -9420,150 +9420,150 @@
 			<key>Allow Title Reporting</key>
 			<false/>
 			<key>Ambiguous Double Width</key>
-			<false/>
+			<true/>
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.31090480089187622</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.31097450852394104</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.31091481447219849</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.37614947557449341</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.42364898324012756</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.98232400417327881</real>
+				<real>0.80000001192092896</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.6709248423576355</real>
+				<real>0.2039216011762619</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.88627451658248901</real>
 				<key>Red Component</key>
-				<real>0.81144231557846069</real>
+				<real>0.54117649793624878</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80026060342788696</real>
+				<real>0.30980390310287476</real>
 				<key>Green Component</key>
-				<real>0.99938231706619263</real>
+				<real>0.91372549533843994</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.98823529481887817</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99864548444747925</real>
+				<real>0.81176471710205078</real>
 				<key>Green Component</key>
-				<real>0.86359179019927979</real>
+				<real>0.62352937459945679</real>
 				<key>Red Component</key>
-				<real>0.71164625883102417</real>
+				<real>0.44705879688262939</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99792593717575073</real>
+				<real>0.65882349014282227</real>
 				<key>Green Component</key>
-				<real>0.61130571365356445</real>
+				<real>0.49803918600082397</real>
 				<key>Red Component</key>
-				<real>0.98613822460174561</real>
+				<real>0.67843139171600342</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99585050344467163</real>
+				<real>0.88627451658248901</real>
 				<key>Green Component</key>
-				<real>0.87657672166824341</real>
+				<real>0.88627451658248901</real>
 				<key>Red Component</key>
-				<real>0.87764602899551392</real>
+				<real>0.2039216011762619</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99984121322631836</real>
+				<real>0.92549020051956177</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.93333327770233154</real>
 				<key>Red Component</key>
-				<real>0.99987339973449707</real>
+				<real>0.93333327770233154</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.37816053628921509</real>
+				<real>0.023529410362243652</real>
 				<key>Green Component</key>
-				<real>0.99849504232406616</real>
+				<real>0.60392159223556519</real>
 				<key>Red Component</key>
-				<real>0.66055959463119507</real>
+				<real>0.30588239431381226</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.71580135822296143</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.99778652191162109</real>
+				<real>0.62745100259780884</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.76862752437591553</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99452251195907593</real>
+				<real>0.64313727617263794</real>
 				<key>Green Component</key>
-				<real>0.79408079385757446</real>
+				<real>0.39607840776443481</real>
 				<key>Red Component</key>
-				<real>0.59004867076873779</real>
+				<real>0.2039216011762619</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99112564325332642</real>
+				<real>0.48235291242599487</real>
 				<key>Green Component</key>
-				<real>0.45060330629348755</real>
+				<real>0.31372550129890442</real>
 				<key>Red Component</key>
-				<real>0.98204964399337769</real>
+				<real>0.45882350206375122</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99456900358200073</real>
+				<real>0.60392159223556519</real>
 				<key>Green Component</key>
-				<real>0.77090901136398315</real>
+				<real>0.59607851505279541</real>
 				<key>Red Component</key>
-				<real>0.77789831161499023</real>
+				<real>0.023529410362243652</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93643331527709961</real>
+				<real>0.81176471710205078</real>
 				<key>Green Component</key>
-				<real>0.93091332912445068</real>
+				<real>0.84313732385635376</real>
 				<key>Red Component</key>
-				<real>0.9357561469078064</real>
+				<real>0.82745099067687988</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.4835779070854187</real>
+				<real>0.32549020648002625</real>
 				<key>Green Component</key>
-				<real>0.48368629813194275</real>
+				<real>0.34117650985717773</real>
 				<key>Red Component</key>
-				<real>0.48359343409538269</real>
+				<real>0.33333331346511841</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.68998062610626221</real>
+				<real>0.16078430414199829</real>
 				<key>Green Component</key>
-				<real>0.71503180265426636</real>
+				<real>0.16078430414199829</real>
 				<key>Red Component</key>
-				<real>0.98980480432510376</real>
+				<real>0.93725490570068359</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9572,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>1</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9595,11 +9595,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99984121322631836</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.99987339973449707</real>
+				<real>0.0</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9612,11 +9612,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.50017809867858887</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.50029021501541138</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.50019419193267822</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
@@ -9646,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94570702314376831</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.94591903686523438</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.94573742151260376</real>
+				<real>0.0</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10961,7 +10961,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-03-12T18:37:40Z</date>
+	<date>2015-03-17T17:15:43Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
