--- a/mac/ユーザ辞書.plist
+++ b/mac/ユーザ辞書.plist
@@ -644,5 +644,11 @@
 		<key>shortcut</key>
 		<string>わくてか</string>
 	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(・ω&lt;)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+	</dict>
 </array>
 </plist>
